# policyengine-snapscreener-validation

./: .gitignore  Makefile  README.md  example.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
policyengine_snapscreener_validation/: __init__.py  calculator.py  cli.py  policyengine.py  scraper.py  validator.py
tests/: scenarios.json  test_calculator.py  test_policyengine.py  test_validator.py
