[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "policyengine-snapscreener-validation"
version = "0.1.0"
description = "Validation tool for comparing PolicyEngine US calculations with SNAP screener"
readme = "README.md"
authors = [
    {name = "PolicyEngine", email = "hello@policyengine.org"}
]
license = {text = "MIT"}
requires-python = ">=3.13"
dependencies = [
    "policyengine-us>=0.1.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "click>=8.0.0",
    "rich>=10.0.0",
    "tabulate>=0.9.0",
    "playwright>=1.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=4.0.0",
]

[project.scripts]
snap-validate = "policyengine_snapscreener_validation.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["policyengine_snapscreener_validation*"]

[tool.black]
line-length = 79
target-version = ["py313"]

[tool.isort]
profile = "black"
line_length = 79